--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,6 +9,7 @@ deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:305:2100::4ede;
+deny 2001:41d0:305:2100::c462;
 deny 2001:41d0:601:1100::26d0;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
@@ -131,6 +132,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:bab9::1;
 deny 2602:f6f6:2:cf34::1;
@@ -142,6 +144,7 @@ deny 2602:fa59:5:915::1;
 deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fb54:1400::1d;
+deny 2602:fb54:1800::ad;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
@@ -233,13 +236,9 @@ deny 2620:18c:0:192::e0:131;
 deny 2620:18c:0:192::e0:132;
 deny 2620:18c:0:192::e0:133;
 deny 2620:18c:0:192::e0:134;
-deny 2620:18c:0:192::e0:135;
-deny 2620:18c:0:192::e0:136;
 deny 2620:18c:0:192::e0:137;
 deny 2620:18c:0:192::e0:138;
 deny 2620:18c:0:192::e0:139;
-deny 2620:18c:0:192::e0:140;
-deny 2620:18c:0:192::e0:141;
 deny 2620:18c:0:192::e0:142;
 deny 2620:18c:0:192::e0:143;
 deny 2620:18c:0:192::e0:144;
@@ -254,7 +253,6 @@ deny 2620:18c:0:192::e0:155;
 deny 2620:18c:0:192::e0:156;
 deny 2620:18c:0:192::e0:157;
 deny 2620:18c:0:192::e0:158;
-deny 2620:18c:0:192::e0:159;
 deny 2620:18c:0:192::e0:160;
 deny 2620:18c:0:192::e0:161;
 deny 2620:18c:0:192::e0:162;
@@ -299,16 +297,12 @@ deny 2620:18c:0:192::e0:201;
 deny 2620:18c:0:192::e0:202;
 deny 2620:18c:0:192::e0:203;
 deny 2620:18c:0:192::e0:204;
-deny 2620:18c:0:192::e0:205;
-deny 2620:18c:0:192::e0:206;
 deny 2620:18c:0:192::e0:207;
 deny 2620:18c:0:192::e0:208;
 deny 2620:18c:0:192::e0:209;
 deny 2620:18c:0:192::e0:210;
 deny 2620:18c:0:192::e0:211;
-deny 2620:18c:0:192::e0:212;
 deny 2620:18c:0:192::e0:213;
-deny 2620:18c:0:192::e0:214;
 deny 2620:18c:0:192::e0:215;
 deny 2620:18c:0:192::e0:216;
 deny 2620:18c:0:192::e0:217;
@@ -316,7 +310,6 @@ deny 2620:18c:0:192::e0:218;
 deny 2620:18c:0:192::e0:219;
 deny 2620:18c:0:192::e0:220;
 deny 2620:18c:0:192::e0:221;
-deny 2620:18c:0:192::e0:222;
 deny 2620:18c:0:192::e0:223;
 deny 2620:18c:0:192::e0:224;
 deny 2620:18c:0:192::e0:225;
@@ -341,14 +334,12 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
-deny 2a00:7b80:452:3000::225;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -421,7 +412,6 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
-deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -676,6 +666,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:133;
@@ -752,6 +743,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:3085::4f2;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
 deny 2a14:c380:50:60::a;
 deny 2a14:c380:50:62::a;
