--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -144,7 +144,6 @@ deny 2602:fa59:5:915::1;
 deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fb54:1400::1d;
-deny 2602:fb54:1800::ad;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
@@ -244,7 +243,6 @@ deny 2620:18c:0:192::e0:143;
 deny 2620:18c:0:192::e0:144;
 deny 2620:18c:0:192::e0:145;
 deny 2620:18c:0:192::e0:147;
-deny 2620:18c:0:192::e0:148;
 deny 2620:18c:0:192::e0:149;
 deny 2620:18c:0:192::e0:150;
 deny 2620:18c:0:192::e0:152;
@@ -253,7 +251,6 @@ deny 2620:18c:0:192::e0:155;
 deny 2620:18c:0:192::e0:156;
 deny 2620:18c:0:192::e0:157;
 deny 2620:18c:0:192::e0:158;
-deny 2620:18c:0:192::e0:160;
 deny 2620:18c:0:192::e0:161;
 deny 2620:18c:0:192::e0:162;
 deny 2620:18c:0:192::e0:163;
@@ -310,7 +307,6 @@ deny 2620:18c:0:192::e0:218;
 deny 2620:18c:0:192::e0:219;
 deny 2620:18c:0:192::e0:220;
 deny 2620:18c:0:192::e0:221;
-deny 2620:18c:0:192::e0:223;
 deny 2620:18c:0:192::e0:224;
 deny 2620:18c:0:192::e0:225;
 deny 2620:7:6001::120;
@@ -340,6 +336,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -393,7 +390,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -666,7 +662,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:133;
