--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -198,6 +198,7 @@ set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.132.187;
 set_real_ip_from 176.65.134.4;
@@ -584,7 +585,6 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
-set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -767,7 +767,6 @@ set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
-set_real_ip_from 212.193.3.103;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -794,7 +793,6 @@ set_real_ip_from 23.129.64.143;
 set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.147;
-set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.152;
@@ -803,7 +801,6 @@ set_real_ip_from 23.129.64.155;
 set_real_ip_from 23.129.64.156;
 set_real_ip_from 23.129.64.157;
 set_real_ip_from 23.129.64.158;
-set_real_ip_from 23.129.64.160;
 set_real_ip_from 23.129.64.161;
 set_real_ip_from 23.129.64.162;
 set_real_ip_from 23.129.64.163;
@@ -860,7 +857,6 @@ set_real_ip_from 23.129.64.218;
 set_real_ip_from 23.129.64.219;
 set_real_ip_from 23.129.64.220;
 set_real_ip_from 23.129.64.221;
-set_real_ip_from 23.129.64.223;
 set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
@@ -949,7 +945,6 @@ set_real_ip_from 2602:fa59:5:915::1;
 set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fb54:1400::1d;
-set_real_ip_from 2602:fb54:1800::ad;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
@@ -1049,7 +1044,6 @@ set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:147;
-set_real_ip_from 2620:18c:0:192::e0:148;
 set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:152;
@@ -1058,7 +1052,6 @@ set_real_ip_from 2620:18c:0:192::e0:155;
 set_real_ip_from 2620:18c:0:192::e0:156;
 set_real_ip_from 2620:18c:0:192::e0:157;
 set_real_ip_from 2620:18c:0:192::e0:158;
-set_real_ip_from 2620:18c:0:192::e0:160;
 set_real_ip_from 2620:18c:0:192::e0:161;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
@@ -1115,7 +1108,6 @@ set_real_ip_from 2620:18c:0:192::e0:218;
 set_real_ip_from 2620:18c:0:192::e0:219;
 set_real_ip_from 2620:18c:0:192::e0:220;
 set_real_ip_from 2620:18c:0:192::e0:221;
-set_real_ip_from 2620:18c:0:192::e0:223;
 set_real_ip_from 2620:18c:0:192::e0:224;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
@@ -1146,6 +1138,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1199,7 +1192,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1472,7 +1464,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:133;
@@ -1724,7 +1715,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
