Update lists at 20251114-0301

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -110,7 +110,6 @@ allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
-allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -230,21 +229,16 @@ allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 allow 2620:18c:0:192::99;
-allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
-allow 2620:18c:0:192::e0:132;
-allow 2620:18c:0:192::e0:133;
 allow 2620:18c:0:192::e0:134;
 allow 2620:18c:0:192::e0:137;
 allow 2620:18c:0:192::e0:138;
-allow 2620:18c:0:192::e0:139;
 allow 2620:18c:0:192::e0:142;
 allow 2620:18c:0:192::e0:143;
 allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:147;
 allow 2620:18c:0:192::e0:149;
-allow 2620:18c:0:192::e0:150;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:155;
@@ -288,9 +282,7 @@ allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:196;
 allow 2620:18c:0:192::e0:197;
 allow 2620:18c:0:192::e0:198;
-allow 2620:18c:0:192::e0:199;
 allow 2620:18c:0:192::e0:200;
-allow 2620:18c:0:192::e0:201;
 allow 2620:18c:0:192::e0:202;
 allow 2620:18c:0:192::e0:203;
 allow 2620:18c:0:192::e0:204;
@@ -310,7 +302,6 @@ allow 2620:18c:0:192::e0:221;
 allow 2620:18c:0:192::e0:224;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
-allow 2620:95:4007::111;
 allow 2800:ba0:2:ee01::7583;
 allow 2800:ba0:6:c1::4858;
 allow 2803:200:ffff:ff0c::ae92:2a2f;
@@ -390,6 +381,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -705,6 +697,7 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
+allow 2a12:a800:2:1:45:141:215:156;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
