--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.146.203.11;
 set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
-set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.253.24.18;
@@ -184,7 +183,6 @@ set_real_ip_from 171.25.193.82;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.186.73;
 set_real_ip_from 172.104.243.155;
-set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
@@ -780,21 +778,16 @@ set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.182.75.199;
 set_real_ip_from 220.135.36.173;
 set_real_ip_from 23.129.180.155;
-set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
-set_real_ip_from 23.129.64.132;
-set_real_ip_from 23.129.64.133;
 set_real_ip_from 23.129.64.134;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
-set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.142;
 set_real_ip_from 23.129.64.143;
 set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.149;
-set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.152;
 set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.129.64.155;
@@ -838,9 +831,7 @@ set_real_ip_from 23.129.64.194;
 set_real_ip_from 23.129.64.196;
 set_real_ip_from 23.129.64.197;
 set_real_ip_from 23.129.64.198;
-set_real_ip_from 23.129.64.199;
 set_real_ip_from 23.129.64.200;
-set_real_ip_from 23.129.64.201;
 set_real_ip_from 23.129.64.202;
 set_real_ip_from 23.129.64.203;
 set_real_ip_from 23.129.64.204;
@@ -906,7 +897,6 @@ set_real_ip_from 23.236.186.22;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
-set_real_ip_from 2400:8907::f03c:95ff:fe79:8c79;
 set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2400:d320:2261:6860::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1031,21 +1021,16 @@ set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
-set_real_ip_from 2620:18c:0:192::e0:130;
 set_real_ip_from 2620:18c:0:192::e0:131;
-set_real_ip_from 2620:18c:0:192::e0:132;
-set_real_ip_from 2620:18c:0:192::e0:133;
 set_real_ip_from 2620:18c:0:192::e0:134;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:142;
 set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:147;
 set_real_ip_from 2620:18c:0:192::e0:149;
-set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:152;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:18c:0:192::e0:155;
@@ -1089,9 +1074,7 @@ set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:196;
 set_real_ip_from 2620:18c:0:192::e0:197;
 set_real_ip_from 2620:18c:0:192::e0:198;
-set_real_ip_from 2620:18c:0:192::e0:199;
 set_real_ip_from 2620:18c:0:192::e0:200;
-set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
 set_real_ip_from 2620:18c:0:192::e0:203;
 set_real_ip_from 2620:18c:0:192::e0:204;
@@ -1111,7 +1094,6 @@ set_real_ip_from 2620:18c:0:192::e0:221;
 set_real_ip_from 2620:18c:0:192::e0:224;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
-set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -1192,6 +1174,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1507,6 +1490,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
+set_real_ip_from 2a12:a800:2:1:45:141:215:156;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
@@ -1620,6 +1604,7 @@ set_real_ip_from 45.141.119.29;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
+set_real_ip_from 45.141.215.156;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
@@ -1715,6 +1700,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1752,7 +1738,6 @@ set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.60.208;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 62.211.139.98;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.106;
 set_real_ip_from 64.190.113.221;
@@ -1807,7 +1792,6 @@ set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.145;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.97.20.77;
