--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -110,7 +110,6 @@ set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
-set_real_ip_from 2400:8907::f03c:95ff:fe79:8c79;
 set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2400:d320:2261:6860::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -230,21 +229,16 @@ set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
-set_real_ip_from 2620:18c:0:192::e0:130;
 set_real_ip_from 2620:18c:0:192::e0:131;
-set_real_ip_from 2620:18c:0:192::e0:132;
-set_real_ip_from 2620:18c:0:192::e0:133;
 set_real_ip_from 2620:18c:0:192::e0:134;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:142;
 set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:147;
 set_real_ip_from 2620:18c:0:192::e0:149;
-set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:152;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:18c:0:192::e0:155;
@@ -288,9 +282,7 @@ set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:196;
 set_real_ip_from 2620:18c:0:192::e0:197;
 set_real_ip_from 2620:18c:0:192::e0:198;
-set_real_ip_from 2620:18c:0:192::e0:199;
 set_real_ip_from 2620:18c:0:192::e0:200;
-set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
 set_real_ip_from 2620:18c:0:192::e0:203;
 set_real_ip_from 2620:18c:0:192::e0:204;
@@ -310,7 +302,6 @@ set_real_ip_from 2620:18c:0:192::e0:221;
 set_real_ip_from 2620:18c:0:192::e0:224;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
-set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:200:ffff:ff0c::ae92:2a2f;
@@ -390,6 +381,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -705,6 +697,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
+set_real_ip_from 2a12:a800:2:1:45:141:215:156;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
