Update lists at 20251114-1201

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -9,7 +9,6 @@ deny 103.164.54.199;
 deny 103.193.179.233;
 deny 103.20.241.102;
 deny 103.251.167.10;
-deny 103.253.24.18;
 deny 103.28.52.93;
 deny 103.91.65.44;
 deny 104.167.241.4;
@@ -139,6 +138,7 @@ deny 149.56.44.47;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.150.12;
+deny 152.53.184.161;
 deny 152.53.210.165;
 deny 152.53.48.80;
 deny 154.16.116.61;
@@ -271,6 +271,7 @@ deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.129.62.64;
 deny 185.130.47.58;
+deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.132.53.188;
 deny 185.132.53.88;
@@ -455,7 +456,6 @@ deny 185.246.188.74;
 deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
-deny 185.247.224.89;
 deny 185.247.226.95;
 deny 185.252.232.218;
 deny 185.254.196.141;
@@ -781,13 +781,11 @@ deny 23.129.64.143;
 deny 23.129.64.144;
 deny 23.129.64.145;
 deny 23.129.64.147;
-deny 23.129.64.149;
 deny 23.129.64.152;
 deny 23.129.64.153;
 deny 23.129.64.155;
 deny 23.129.64.156;
 deny 23.129.64.157;
-deny 23.129.64.158;
 deny 23.129.64.162;
 deny 23.129.64.163;
 deny 23.129.64.164;
@@ -849,6 +847,7 @@ deny 23.137.253.254;
 deny 23.137.254.244;
 deny 23.137.255.85;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.177.185.98;
 deny 23.184.48.78;
 deny 23.190.216.8;
@@ -862,7 +861,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -907,11 +905,13 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:bab9::1;
 deny 2602:f6f6:2:cf34::1;
@@ -1017,13 +1017,11 @@ deny 2620:18c:0:192::e0:143;
 deny 2620:18c:0:192::e0:144;
 deny 2620:18c:0:192::e0:145;
 deny 2620:18c:0:192::e0:147;
-deny 2620:18c:0:192::e0:149;
 deny 2620:18c:0:192::e0:152;
 deny 2620:18c:0:192::e0:153;
 deny 2620:18c:0:192::e0:155;
 deny 2620:18c:0:192::e0:156;
 deny 2620:18c:0:192::e0:157;
-deny 2620:18c:0:192::e0:158;
 deny 2620:18c:0:192::e0:162;
 deny 2620:18c:0:192::e0:163;
 deny 2620:18c:0:192::e0:164;
@@ -1182,7 +1180,6 @@ deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
 deny 2a06:1700:0:12::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:1c1::1902:38d4;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
@@ -1208,6 +1205,7 @@ deny 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:80:1270::;
+deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1510,6 +1508,7 @@ deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
 deny 2a14:c380:50:60::a;
+deny 2a14:c380:50:62::a;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.133.0.235;
@@ -1533,6 +1532,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1739,7 +1739,6 @@ deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
-deny 74.208.79.7;
 deny 74.82.47.194;
 deny 77.239.97.46;
 deny 77.48.28.193;
