--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,7 +9,6 @@ allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.20.241.102;
 allow 103.251.167.10;
-allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
 allow 104.167.241.4;
@@ -139,6 +138,7 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.150.12;
+allow 152.53.184.161;
 allow 152.53.210.165;
 allow 152.53.48.80;
 allow 154.16.116.61;
@@ -271,6 +271,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
@@ -455,7 +456,6 @@ allow 185.246.188.74;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
-allow 185.247.224.89;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -781,13 +781,11 @@ allow 23.129.64.143;
 allow 23.129.64.144;
 allow 23.129.64.145;
 allow 23.129.64.147;
-allow 23.129.64.149;
 allow 23.129.64.152;
 allow 23.129.64.153;
 allow 23.129.64.155;
 allow 23.129.64.156;
 allow 23.129.64.157;
-allow 23.129.64.158;
 allow 23.129.64.162;
 allow 23.129.64.163;
 allow 23.129.64.164;
@@ -849,6 +847,7 @@ allow 23.137.253.254;
 allow 23.137.254.244;
 allow 23.137.255.85;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
@@ -862,7 +861,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -907,11 +905,13 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1017,13 +1017,11 @@ allow 2620:18c:0:192::e0:143;
 allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:147;
-allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:155;
 allow 2620:18c:0:192::e0:156;
 allow 2620:18c:0:192::e0:157;
-allow 2620:18c:0:192::e0:158;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
 allow 2620:18c:0:192::e0:164;
@@ -1182,7 +1180,6 @@ allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:1c1::1902:38d4;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -1208,6 +1205,7 @@ allow 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
+allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1510,6 +1508,7 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
+allow 2a14:c380:50:62::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
@@ -1533,6 +1532,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1739,7 +1739,6 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
-allow 74.208.79.7;
 allow 74.82.47.194;
 allow 77.239.97.46;
 allow 77.48.28.193;
