--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -125,11 +125,13 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -235,13 +237,11 @@ allow 2620:18c:0:192::e0:143;
 allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:147;
-allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:155;
 allow 2620:18c:0:192::e0:156;
 allow 2620:18c:0:192::e0:157;
-allow 2620:18c:0:192::e0:158;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
 allow 2620:18c:0:192::e0:164;
@@ -399,7 +399,6 @@ allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:1c1::1902:38d4;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -425,6 +424,7 @@ allow 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:80:1270::;
+allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -727,3 +727,4 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
+allow 2a14:c380:50:62::a;
