--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -9,7 +9,6 @@ set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.251.167.10;
-set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 103.91.65.44;
 set_real_ip_from 104.167.241.4;
@@ -139,6 +138,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.150.12;
+set_real_ip_from 152.53.184.161;
 set_real_ip_from 152.53.210.165;
 set_real_ip_from 152.53.48.80;
 set_real_ip_from 154.16.116.61;
@@ -271,6 +271,7 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.129.62.64;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.107;
 set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.132.53.188;
 set_real_ip_from 185.132.53.88;
@@ -455,7 +456,6 @@ set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
-set_real_ip_from 185.247.224.89;
 set_real_ip_from 185.247.226.95;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
@@ -781,13 +781,11 @@ set_real_ip_from 23.129.64.143;
 set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.147;
-set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.152;
 set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.129.64.155;
 set_real_ip_from 23.129.64.156;
 set_real_ip_from 23.129.64.157;
-set_real_ip_from 23.129.64.158;
 set_real_ip_from 23.129.64.162;
 set_real_ip_from 23.129.64.163;
 set_real_ip_from 23.129.64.164;
@@ -849,6 +847,7 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.137.255.85;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.177.185.98;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.190.216.8;
@@ -862,7 +861,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -907,11 +905,13 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:bab9::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
@@ -1017,13 +1017,11 @@ set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:147;
-set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:152;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:18c:0:192::e0:155;
 set_real_ip_from 2620:18c:0:192::e0:156;
 set_real_ip_from 2620:18c:0:192::e0:157;
-set_real_ip_from 2620:18c:0:192::e0:158;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
 set_real_ip_from 2620:18c:0:192::e0:164;
@@ -1182,7 +1180,6 @@ set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
 set_real_ip_from 2a06:1700:0:12::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:1c1::1902:38d4;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
@@ -1208,6 +1205,7 @@ set_real_ip_from 2a09:be40:28ff:50:c4c9:3dff:fea3:f4fa;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:80:1270::;
+set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1510,6 +1508,7 @@ set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
 set_real_ip_from 2a14:c380:50:60::a;
+set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
@@ -1533,6 +1532,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1739,7 +1739,6 @@ set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
-set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.239.97.46;
 set_real_ip_from 77.48.28.193;
