--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -102,6 +102,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:f9a1::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -117,6 +118,7 @@ set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -128,7 +130,6 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:bab9::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
@@ -227,15 +228,11 @@ set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
 set_real_ip_from 2620:18c:0:192::e0:131;
-set_real_ip_from 2620:18c:0:192::e0:134;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
-set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:147;
 set_real_ip_from 2620:18c:0:192::e0:152;
-set_real_ip_from 2620:18c:0:192::e0:156;
 set_real_ip_from 2620:18c:0:192::e0:157;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
@@ -271,19 +268,9 @@ set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:200;
 set_real_ip_from 2620:18c:0:192::e0:202;
-set_real_ip_from 2620:18c:0:192::e0:203;
 set_real_ip_from 2620:18c:0:192::e0:204;
-set_real_ip_from 2620:18c:0:192::e0:207;
-set_real_ip_from 2620:18c:0:192::e0:208;
-set_real_ip_from 2620:18c:0:192::e0:209;
 set_real_ip_from 2620:18c:0:192::e0:211;
-set_real_ip_from 2620:18c:0:192::e0:215;
-set_real_ip_from 2620:18c:0:192::e0:216;
-set_real_ip_from 2620:18c:0:192::e0:217;
-set_real_ip_from 2620:18c:0:192::e0:218;
 set_real_ip_from 2620:18c:0:192::e0:219;
-set_real_ip_from 2620:18c:0:192::e0:220;
-set_real_ip_from 2620:18c:0:192::e0:221;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2800:ba0:2:ee01::7583;
