--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -130,6 +130,7 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:bab9::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
@@ -227,13 +228,27 @@ set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
-set_real_ip_from 2620:18c:0:192::e0:131;
+set_real_ip_from 2620:18c:0:192::e0:130;
+set_real_ip_from 2620:18c:0:192::e0:133;
+set_real_ip_from 2620:18c:0:192::e0:135;
+set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
+set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:144;
+set_real_ip_from 2620:18c:0:192::e0:145;
+set_real_ip_from 2620:18c:0:192::e0:146;
 set_real_ip_from 2620:18c:0:192::e0:147;
+set_real_ip_from 2620:18c:0:192::e0:150;
+set_real_ip_from 2620:18c:0:192::e0:151;
 set_real_ip_from 2620:18c:0:192::e0:152;
+set_real_ip_from 2620:18c:0:192::e0:153;
+set_real_ip_from 2620:18c:0:192::e0:154;
+set_real_ip_from 2620:18c:0:192::e0:155;
 set_real_ip_from 2620:18c:0:192::e0:157;
+set_real_ip_from 2620:18c:0:192::e0:158;
+set_real_ip_from 2620:18c:0:192::e0:159;
+set_real_ip_from 2620:18c:0:192::e0:161;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
 set_real_ip_from 2620:18c:0:192::e0:164;
@@ -266,11 +281,25 @@ set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
 set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
+set_real_ip_from 2620:18c:0:192::e0:196;
 set_real_ip_from 2620:18c:0:192::e0:200;
+set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
 set_real_ip_from 2620:18c:0:192::e0:204;
+set_real_ip_from 2620:18c:0:192::e0:205;
+set_real_ip_from 2620:18c:0:192::e0:210;
 set_real_ip_from 2620:18c:0:192::e0:211;
+set_real_ip_from 2620:18c:0:192::e0:212;
+set_real_ip_from 2620:18c:0:192::e0:213;
+set_real_ip_from 2620:18c:0:192::e0:214;
+set_real_ip_from 2620:18c:0:192::e0:216;
+set_real_ip_from 2620:18c:0:192::e0:217;
+set_real_ip_from 2620:18c:0:192::e0:218;
 set_real_ip_from 2620:18c:0:192::e0:219;
+set_real_ip_from 2620:18c:0:192::e0:220;
+set_real_ip_from 2620:18c:0:192::e0:221;
+set_real_ip_from 2620:18c:0:192::e0:222;
+set_real_ip_from 2620:18c:0:192::e0:223;
 set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2800:ba0:2:ee01::7583;
@@ -352,7 +381,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
