--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -234,7 +234,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 180.150.226.99;
 allow 184.75.221.107;
 allow 185.100.85.132;
 allow 185.100.85.24;
@@ -772,13 +771,27 @@ allow 217.12.221.131;
 allow 217.182.75.199;
 allow 220.135.36.173;
 allow 23.129.180.155;
-allow 23.129.64.131;
+allow 23.129.64.130;
+allow 23.129.64.133;
+allow 23.129.64.135;
+allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
+allow 23.129.64.139;
 allow 23.129.64.144;
+allow 23.129.64.145;
+allow 23.129.64.146;
 allow 23.129.64.147;
+allow 23.129.64.150;
+allow 23.129.64.151;
 allow 23.129.64.152;
+allow 23.129.64.153;
+allow 23.129.64.154;
+allow 23.129.64.155;
 allow 23.129.64.157;
+allow 23.129.64.158;
+allow 23.129.64.159;
+allow 23.129.64.161;
 allow 23.129.64.162;
 allow 23.129.64.163;
 allow 23.129.64.164;
@@ -811,11 +824,25 @@ allow 23.129.64.190;
 allow 23.129.64.191;
 allow 23.129.64.192;
 allow 23.129.64.193;
+allow 23.129.64.196;
 allow 23.129.64.200;
+allow 23.129.64.201;
 allow 23.129.64.202;
 allow 23.129.64.204;
+allow 23.129.64.205;
+allow 23.129.64.210;
 allow 23.129.64.211;
+allow 23.129.64.212;
+allow 23.129.64.213;
+allow 23.129.64.214;
+allow 23.129.64.216;
+allow 23.129.64.217;
+allow 23.129.64.218;
 allow 23.129.64.219;
+allow 23.129.64.220;
+allow 23.129.64.221;
+allow 23.129.64.222;
+allow 23.129.64.223;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
@@ -849,7 +876,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -890,6 +916,7 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -987,13 +1014,27 @@ allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 allow 2620:18c:0:192::99;
-allow 2620:18c:0:192::e0:131;
+allow 2620:18c:0:192::e0:130;
+allow 2620:18c:0:192::e0:133;
+allow 2620:18c:0:192::e0:135;
+allow 2620:18c:0:192::e0:136;
 allow 2620:18c:0:192::e0:137;
 allow 2620:18c:0:192::e0:138;
+allow 2620:18c:0:192::e0:139;
 allow 2620:18c:0:192::e0:144;
+allow 2620:18c:0:192::e0:145;
+allow 2620:18c:0:192::e0:146;
 allow 2620:18c:0:192::e0:147;
+allow 2620:18c:0:192::e0:150;
+allow 2620:18c:0:192::e0:151;
 allow 2620:18c:0:192::e0:152;
+allow 2620:18c:0:192::e0:153;
+allow 2620:18c:0:192::e0:154;
+allow 2620:18c:0:192::e0:155;
 allow 2620:18c:0:192::e0:157;
+allow 2620:18c:0:192::e0:158;
+allow 2620:18c:0:192::e0:159;
+allow 2620:18c:0:192::e0:161;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
 allow 2620:18c:0:192::e0:164;
@@ -1026,11 +1067,25 @@ allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
 allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
+allow 2620:18c:0:192::e0:196;
 allow 2620:18c:0:192::e0:200;
+allow 2620:18c:0:192::e0:201;
 allow 2620:18c:0:192::e0:202;
 allow 2620:18c:0:192::e0:204;
+allow 2620:18c:0:192::e0:205;
+allow 2620:18c:0:192::e0:210;
 allow 2620:18c:0:192::e0:211;
+allow 2620:18c:0:192::e0:212;
+allow 2620:18c:0:192::e0:213;
+allow 2620:18c:0:192::e0:214;
+allow 2620:18c:0:192::e0:216;
+allow 2620:18c:0:192::e0:217;
+allow 2620:18c:0:192::e0:218;
 allow 2620:18c:0:192::e0:219;
+allow 2620:18c:0:192::e0:220;
+allow 2620:18c:0:192::e0:221;
+allow 2620:18c:0:192::e0:222;
+allow 2620:18c:0:192::e0:223;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 27.255.75.198;
@@ -1113,7 +1168,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1488,6 +1542,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1636,7 +1691,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1711,8 +1765,6 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.94.92.106;
 allow 80.94.92.135;
-allow 80.94.92.92;
-allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
